# mentor-match

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  form-output-headings.csv  heroku.yml  match.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: deploy.yml  python-app.yml  trunk-dev.yml
app/: __init__.py  classes.py  config.py  export.py  extensions.py  helpers.py  tasks.py
app/auth/: routes.py
app/errors/: __init__.py  errors.py
app/main/: __init__.py  routes.py
app/notify/: __init__.py  routes.py
app/static/: main.js  style.css
app/static/data/large/: mentees.csv  mentors.csv
app/static/data/small/: mentees.csv  mentors.csv
app/tasks/: __init__.py  helpers.py  tasks.py
app/templates/: base.html  cookies.html  done.html  index.html  input.html  login.html  match.html  notify-settings--api-key.html  notify-settings--reply-to.html  notify-settings--template-ids.html  notify-settings.html  options.html  output.html  page-with-header.html  page-with-panel.html  privacy-and-data.html  process.html
app/templates/notify-settings/: base-notify-settings.html  notify-settings--api-key.html  notify-settings--reply-to.html  notify-settings--template-ids.html  notify-settings-intro.html
docs/: .gitignore  404.html  CNAME  Dockerfile  Gemfile  _config.yml  index.md
docs/_docs/: architecture.md  aws.md  contributing.md  cookies.md  getting-started.md  licences.md  notifications.md  privacy.md  second-test-document.md  test-document.md
iac/terraform/: .terraform.lock.hcl  README.md  apprunner.tf  backend.tf  dns.tf  ecr.tf  ecs.tf  elasticache_redis.tf  iam.tf  module_state.tf  module_vpc.tf  outputs.tf  variables.tf  vpce.tf
infra/: README.md  app.py  infra_stack.py  pyproject.toml  setup.py
infra/app/: index.py
infra/lambda/: index.py  s3_api_gw.py
infra/lambda/python/: classes.py  tasks.py
infra/python/: classes.py  helpers.py  pyproject.toml  requirements.txt  tasks.py
infra/tests/unit/: test_infra_stack.py
matching/: factory.py  match.py  mentee.py  mentor.py  person.py  process.py
matching/helpers/: pre_processing.py
mentor-match/: match.py  mentee.py  mentor.py  person.py  process.py
mentor-match-infra/: app.py  cdk.json  requirements.txt
mentor-match-infra/mentor_match_infra/: infrastructure.py  mentor_match_infra_stack.py  mentor_match_pipeline.py  mentor_match_stage.py
mentor_match_infra/: app.py  cdk.context.json  cdk.json  requirements.txt
mentor_match_infra/mentor_match_infra/: custom_steps.py  elasticache_stack_test.py  infrastructure.py  mentor_match_pipeline.py  mentor_match_stack.py  mentor_match_stage.py
mentor_match_web/app/: __init__.py  config.py  extensions.py  helpers.py
mentor_match_web/app/auth/: __init__.py  routes.py
mentor_match_web/app/main/: __init__.py  routes.py
mentor_match_web/app/tasks/: __init__.py  helpers.py  tasks.py
mentor_match_web/app/templates/: base.html  cookies.html  done.html  index.html  input.html  login.html  options.html  output.html  page-with-header.html  page-with-panel.html  privacy-and-data.html  process.html
mentor_match_web/app/templates/notify-settings/: base-notify-settings.html  notify-settings--api-key.html  (+2 more)
sample_data/large/: mentees.csv  mentors.csv
sample_data/small/: mentees.csv  mentors.csv
tasks/: __init__.py  tasks.py
tests/: conftest.py  test_classes.py  test_download_route.py  test_errors.py  test_export.py  test_integration.py  test_login.py  test_match.py  test_notify_client.py  test_notify_route.py  test_person.py  test_pre_processing.py  test_process.py  test_process_route.py  test_task.py  test_tasks.py  test_upload_route.py
tests/infra_tests/unit/: test_state_machine.py
