[tool.poetry]
name = "layers"
version = "0.1.0"
description = ""
authors = ["jonathan <jonodrew@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mentor-match = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
